--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/apsdehal/Shortest-Adversial-Path-Architecture#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
     "minimist": "^1.2.0"
   }
