--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shortest adversial path architecture",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha -u bdd tests/main.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.1"
   }
 }
