--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "express": "^4.14.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "sqlite3": "^3.1.6"
   },
   "devDependencies": {
     "mocha": "^3.1.1"
