--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "minimist": "^1.2.0",
-    "sqlite3": "^3.1.6"
+    "sqlite-sync": "^0.3.5"
   },
   "devDependencies": {
     "mocha": "^3.1.1"
