--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "minimist": "^1.2.0",
+    "socket.io": "^1.5.0",
     "sqlite-sync": "^0.3.5"
   },
   "devDependencies": {
